ToyCParser.py
# Generated from ToyC.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class ToyCParser ( Parser ):

    grammarFileName = "ToyC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'#include'", "'<'", "'>'", "'('", "')'", 
                     "'{'", "'}'", "','", "';'", "'='", "'['", "']'", "'if'", 
                     "'else'", "'while'", "'for'", "'return'", "'!'", "'&&'", 
                     "'||'", "'-'", "'+'", "'*'", "'/'", "'%'", "'=='", 
                     "'!='", "'<='", "'>='", "'int'", "'double'", "'char'", 
                     "'string'", "'void'", "'strlen'", "'atoi'", "'printf'", 
                     "'scanf'", "'&'", "'gets'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "ID", "INT", "DOUBLE", "CHAR", "STRING", 
                      "LIB", "Conjunction", "Operator", "UnaryOperator", 
                      "LineComment", "BlockComment", "WS" ]

    RULE_prog = 0
    RULE_include = 1
    RULE_itemFunction = 2
    RULE_funcBody = 3
    RULE_parameters = 4
    RULE_parameter = 5
    RULE_body = 6
    RULE_block = 7
    RULE_initBlock = 8
    RULE_initArrBlock = 9
    RULE_ifBlocks = 10
    RULE_ifBlock = 11
    RULE_elifBlock = 12
    RULE_elseBlock = 13
    RULE_condition = 14
    RULE_whileBlock = 15
    RULE_assignBlock = 16
    RULE_forBlock = 17
    RULE_forExpr = 18
    RULE_returnBlock = 19
    RULE_expr = 20
    RULE_itemType = 21
    RULE_itemArray = 22
    RULE_itemVoid = 23
    RULE_arrayItem = 24
    RULE_func = 25
    RULE_strlenFun = 26
    RULE_atoiFun = 27
    RULE_printfFun = 28
    RULE_scanfFun = 29
    RULE_getsFun = 30
    RULE_otherFun = 31
    RULE_argument = 32
    RULE_itemID = 33
    RULE_itemINT = 34
    RULE_itemDOUBLE = 35
    RULE_itemCHAR = 36
    RULE_itemSTRING = 37
    RULE_itemLIB = 38

    ruleNames =  [ "prog", "include", "itemFunction", "funcBody", "parameters", 
                   "parameter", "body", "block", "initBlock", "initArrBlock", 
                   "ifBlocks", "ifBlock", "elifBlock", "elseBlock", "condition", 
                   "whileBlock", "assignBlock", "forBlock", "forExpr", "returnBlock", 
                   "expr", "itemType", "itemArray", "itemVoid", "arrayItem", 
                   "func", "strlenFun", "atoiFun", "printfFun", "scanfFun", 
                   "getsFun", "otherFun", "argument", "itemID", "itemINT", 
                   "itemDOUBLE", "itemCHAR", "itemSTRING", "itemLIB" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    ID=41
    INT=42
    DOUBLE=43
    CHAR=44
    STRING=45
    LIB=46
    Conjunction=47
    Operator=48
    UnaryOperator=49
    LineComment=50
    BlockComment=51
    WS=52

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def include(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ToyCParser.IncludeContext)
            else:
                return self.getTypedRuleContext(ToyCParser.IncludeContext,i)


        def initBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ToyCParser.InitBlockContext)
            else:
                return self.getTypedRuleContext(ToyCParser.InitBlockContext,i)


        def initArrBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ToyCParser.InitArrBlockContext)
            else:
                return self.getTypedRuleContext(ToyCParser.InitArrBlockContext,i)


        def itemFunction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ToyCParser.ItemFunctionContext)
            else:
                return self.getTypedRuleContext(ToyCParser.ItemFunctionContext,i)


        def getRuleIndex(self):
            return ToyCParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = ToyCParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ToyCParser.T__0:
                self.state = 78
                self.include()
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ToyCParser.T__29) | (1 << ToyCParser.T__30) | (1 << ToyCParser.T__31) | (1 << ToyCParser.T__32) | (1 << ToyCParser.T__33))) != 0):
                self.state = 87
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 84
                    self.initBlock()
                    pass

                elif la_ == 2:
                    self.state = 85
                    self.initArrBlock()
                    pass

                elif la_ == 3:
                    self.state = 86
                    self.itemFunction()
                    pass


                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncludeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def itemLIB(self):
            return self.getTypedRuleContext(ToyCParser.ItemLIBContext,0)


        def getRuleIndex(self):
            return ToyCParser.RULE_include

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInclude" ):
                listener.enterInclude(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInclude" ):
                listener.exitInclude(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInclude" ):
                return visitor.visitInclude(self)
            else:
                return visitor.visitChildren(self)




    def include(self):

        localctx = ToyCParser.IncludeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_include)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(ToyCParser.T__0)
            self.state = 93
            self.match(ToyCParser.T__1)
            self.state = 94
            self.itemLIB()
            self.state = 95
            self.match(ToyCParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ItemFunctionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def itemID(self):
            return self.getTypedRuleContext(ToyCParser.ItemIDContext,0)


        def parameters(self):
            return self.getTypedRuleContext(ToyCParser.ParametersContext,0)


        def funcBody(self):
            return self.getTypedRuleContext(ToyCParser.FuncBodyContext,0)


        def itemType(self):
            return self.getTypedRuleContext(ToyCParser.ItemTypeContext,0)


        def itemVoid(self):
            return self.getTypedRuleContext(ToyCParser.ItemVoidContext,0)


        def getRuleIndex(self):
            return ToyCParser.RULE_itemFunction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterItemFunction" ):
                listener.enterItemFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitItemFunction" ):
                listener.exitItemFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitItemFunction" ):
                return visitor.visitItemFunction(self)
            else:
                return visitor.visitChildren(self)




    def itemFunction(self):

        localctx = ToyCParser.ItemFunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_itemFunction)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ToyCParser.T__29, ToyCParser.T__30, ToyCParser.T__31, ToyCParser.T__32]:
                self.state = 97
                self.itemType()
                pass
            elif token in [ToyCParser.T__33]:
                self.state = 98
                self.itemVoid()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 101
            self.itemID()
            self.state = 102
            self.match(ToyCParser.T__3)
            self.state = 103
            self.parameters()
            self.state = 104
            self.match(ToyCParser.T__4)
            self.state = 105
            self.match(ToyCParser.T__5)
            self.state = 106
            self.funcBody()
            self.state = 107
            self.match(ToyCParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncBodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def body(self):
            return self.getTypedRuleContext(ToyCParser.BodyContext,0)


        def returnBlock(self):
            return self.getTypedRuleContext(ToyCParser.ReturnBlockContext,0)


        def getRuleIndex(self):
            return ToyCParser.RULE_funcBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncBody" ):
                listener.enterFuncBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncBody" ):
                listener.exitFuncBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncBody" ):
                return visitor.visitFuncBody(self)
            else:
                return visitor.visitChildren(self)




    def funcBody(self):

        localctx = ToyCParser.FuncBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_funcBody)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.body()
            self.state = 110
            self.returnBlock()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametersContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ToyCParser.ParameterContext)
            else:
                return self.getTypedRuleContext(ToyCParser.ParameterContext,i)


        def getRuleIndex(self):
            return ToyCParser.RULE_parameters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameters" ):
                listener.enterParameters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameters" ):
                listener.exitParameters(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameters" ):
                return visitor.visitParameters(self)
            else:
                return visitor.visitChildren(self)




    def parameters(self):

        localctx = ToyCParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_parameters)
        self._la = 0 # Token type
        try:
            self.state = 121
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ToyCParser.T__29, ToyCParser.T__30, ToyCParser.T__31, ToyCParser.T__32]:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.parameter()
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==ToyCParser.T__7:
                    self.state = 113
                    self.match(ToyCParser.T__7)
                    self.state = 114
                    self.parameter()
                    self.state = 119
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [ToyCParser.T__4]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def itemType(self):
            return self.getTypedRuleContext(ToyCParser.ItemTypeContext,0)


        def itemID(self):
            return self.getTypedRuleContext(ToyCParser.ItemIDContext,0)


        def getRuleIndex(self):
            return ToyCParser.RULE_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter" ):
                listener.enterParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter" ):
                listener.exitParameter(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter" ):
                return visitor.visitParameter(self)
            else:
                return visitor.visitChildren(self)




    def parameter(self):

        localctx = ToyCParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.itemType()
            self.state = 124
            self.itemID()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ToyCParser.BlockContext)
            else:
                return self.getTypedRuleContext(ToyCParser.BlockContext,i)


        def func(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ToyCParser.FuncContext)
            else:
                return self.getTypedRuleContext(ToyCParser.FuncContext,i)


        def getRuleIndex(self):
            return ToyCParser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody" ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody" ):
                listener.exitBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = ToyCParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 130
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                    if la_ == 1:
                        self.state = 126
                        self.block()
                        pass

                    elif la_ == 2:
                        self.state = 127
                        self.func()
                        self.state = 128
                        self.match(ToyCParser.T__8)
                        pass

             
                self.state = 134
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def initBlock(self):
            return self.getTypedRuleContext(ToyCParser.InitBlockContext,0)


        def initArrBlock(self):
            return self.getTypedRuleContext(ToyCParser.InitArrBlockContext,0)


        def ifBlocks(self):
            return self.getTypedRuleContext(ToyCParser.IfBlocksContext,0)


        def forBlock(self):
            return self.getTypedRuleContext(ToyCParser.ForBlockContext,0)


        def whileBlock(self):
            return self.getTypedRuleContext(ToyCParser.WhileBlockContext,0)


        def assignBlock(self):
            return self.getTypedRuleContext(ToyCParser.AssignBlockContext,0)


        def returnBlock(self):
            return self.getTypedRuleContext(ToyCParser.ReturnBlockContext,0)


        def getRuleIndex(self):
            return ToyCParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = ToyCParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_block)
        try:
            self.state = 142
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.initBlock()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 136
                self.initArrBlock()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 137
                self.ifBlocks()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 138
                self.forBlock()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 139
                self.whileBlock()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 140
                self.assignBlock()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 141
                self.returnBlock()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitBlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def itemID(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ToyCParser.ItemIDContext)
            else:
                return self.getTypedRuleContext(ToyCParser.ItemIDContext,i)


        def itemType(self):
            return self.getTypedRuleContext(ToyCParser.ItemTypeContext,0)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ToyCParser.ExprContext)
            else:
                return self.getTypedRuleContext(ToyCParser.ExprContext,i)


        def getRuleIndex(self):
            return ToyCParser.RULE_initBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInitBlock" ):
                listener.enterInitBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInitBlock" ):
                listener.exitInitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitBlock" ):
                return visitor.visitInitBlock(self)
            else:
                return visitor.visitChildren(self)




    def initBlock(self):

        localctx = ToyCParser.InitBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_initBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.itemType()
            self.state = 145
            self.itemID()
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ToyCParser.T__9:
                self.state = 146
                self.match(ToyCParser.T__9)
                self.state = 147
                self.expr(0)


            self.state = 158
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ToyCParser.T__7:
                self.state = 150
                self.match(ToyCParser.T__7)
                self.state = 151
                self.itemID()
                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==ToyCParser.T__9:
                    self.state = 152
                    self.match(ToyCParser.T__9)
                    self.state = 153
                    self.expr(0)


                self.state = 160
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 161
            self.match(ToyCParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitArrBlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def itemType(self):
            return self.getTypedRuleContext(ToyCParser.ItemTypeContext,0)


        def itemID(self):
            return self.getTypedRuleContext(ToyCParser.ItemIDContext,0)


        def itemINT(self):
            return self.getTypedRuleContext(ToyCParser.ItemINTContext,0)


        def getRuleIndex(self):
            return ToyCParser.RULE_initArrBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInitArrBlock" ):
                listener.enterInitArrBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInitArrBlock" ):
                listener.exitInitArrBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitArrBlock" ):
                return visitor.visitInitArrBlock(self)
            else:
                return visitor.visitChildren(self)




    def initArrBlock(self):

        localctx = ToyCParser.InitArrBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_initArrBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.itemType()
            self.state = 164
            self.itemID()
            self.state = 165
            self.match(ToyCParser.T__10)
            self.state = 166
            self.itemINT()
            self.state = 167
            self.match(ToyCParser.T__11)
            self.state = 168
            self.match(ToyCParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfBlocksContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifBlock(self):
            return self.getTypedRuleContext(ToyCParser.IfBlockContext,0)


        def elifBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ToyCParser.ElifBlockContext)
            else:
                return self.getTypedRuleContext(ToyCParser.ElifBlockContext,i)


        def elseBlock(self):
            return self.getTypedRuleContext(ToyCParser.ElseBlockContext,0)


        def getRuleIndex(self):
            return ToyCParser.RULE_ifBlocks

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfBlocks" ):
                listener.enterIfBlocks(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfBlocks" ):
                listener.exitIfBlocks(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfBlocks" ):
                return visitor.visitIfBlocks(self)
            else:
                return visitor.visitChildren(self)




    def ifBlocks(self):

        localctx = ToyCParser.IfBlocksContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_ifBlocks)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            self.ifBlock()
            self.state = 174
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 171
                    self.elifBlock() 
                self.state = 176
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

            self.state = 178
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ToyCParser.T__13:
                self.state = 177
                self.elseBlock()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfBlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(ToyCParser.ConditionContext,0)


        def body(self):
            return self.getTypedRuleContext(ToyCParser.BodyContext,0)


        def getRuleIndex(self):
            return ToyCParser.RULE_ifBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfBlock" ):
                listener.enterIfBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfBlock" ):
                listener.exitIfBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfBlock" ):
                return visitor.visitIfBlock(self)
            else:
                return visitor.visitChildren(self)




    def ifBlock(self):

        localctx = ToyCParser.IfBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_ifBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self.match(ToyCParser.T__12)
            self.state = 181
            self.match(ToyCParser.T__3)
            self.state = 182
            self.condition()
            self.state = 183
            self.match(ToyCParser.T__4)
            self.state = 184
            self.match(ToyCParser.T__5)
            self.state = 185
            self.body()
            self.state = 186
            self.match(ToyCParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElifBlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(ToyCParser.ConditionContext,0)


        def body(self):
            return self.getTypedRuleContext(ToyCParser.BodyContext,0)


        def getRuleIndex(self):
            return ToyCParser.RULE_elifBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElifBlock" ):
                listener.enterElifBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElifBlock" ):
                listener.exitElifBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElifBlock" ):
                return visitor.visitElifBlock(self)
            else:
                return visitor.visitChildren(self)




    def elifBlock(self):
